# llvm-pretty-bc-parser

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  fuzz.sh  llvm-pretty-bc-parser.cabal  missing-sym-tab.c  not-implemented-crash.c  reduce.sh
.github/workflows/: build.yml  llvm-quick-fuzz.yml  nix-ci.yml
disasm-test/: .gitignore  Instances.hs  Main.hs  README.md
disasm-test/bc_src_tests/: README.md  apple-llvm.bc  apple-llvm.ll  fn-data-layout.bc  fn-data-layout.ll  hello-world.bc  hello-world.ll
disasm-test/cpp/: .gitignore  README.md  atomicrmw.cpp  atomicrmw.ll  atomicrmw.nix  generate.sh  iostream.cpp  iostream.ll  libcxxbc.nix  merge.ll  return0.cpp  return0.ll  smallprog.c  templates.cpp  templates.h  templates.ll
disasm-test/failing/: global.ll
disasm-test/known_bugs/: README.md  issue222_global-var  llvm-pretty_issue113.txt  llvm-pretty_issue114  llvm-pretty_issue123  llvm-pretty_issue123_ll  llvm-pretty_issue124  llvm-pretty_issue13.txt  llvm_dbg_declare_inline  p2.cpp  pr223pr228.txt  pr247
disasm-test/llvm-tests/: README.md  cfi-eof-prologue.new.ll
disasm-test/tests/: T189.c  T189.ll  T258.c  T258.ll  T258.pre-llvm17.ll  T266-constant-icmp.ll  T266-constant-icmp.pre-llvm15.ll  T266-constant-icmp.pre-llvm19.ll  alloca.ll  anon-forward-ref.ll  atomicrmw-faddsub.ll  atomicrmw-fmaxmin.ll  atomicrmw-uincdecwrap.ll  atomicrmw.ll  btf-tag-dicompositetype.at-least-llvm14.ll  btf-tag-diderivedtype.ll  btf-tag-diglobalvariable.at-least-llvm14.ll  btf-tag-diglobalvariable.pre-llvm14.ll  btf-tag-dilocalvariable.at-least-llvm14.ll  btf-tag-disubprogram.ll  callbr.ll  cmpxchg.c  cmpxchg.ll  constantbfloat.ll  constantbfloat.pre-llvm11.ll  constantfloat.ll  debug-loc.ll  derivedtype.c  derivedtype.ll  di-arg-list.at-least-llvm13.ll  di-arg-list.c  diderivedtype-address-space.at-least-llvm14.ll  difixedpointtype.ll  dilocalvariable.at-least-llvm14.ll  disubrangetype.ll  factorial2.ll  fcmp-fast-math.ll  fn-metadata.ll  fneg.ll  fun-attrs.ll  (+45 more)
doc/: developing.md
examples/: .gitignore  Factorial.hs  Makefile  test.c
fuzzing/: .gitignore  Dockerfile  Main.hs  README.md  fuzz-docker.sh  fuzz.sh  reduce.sh  shell.nix
llvm-ast/: LLVMast.hs
llvm-disasm/: LLVMDis.hs
regression-test/: Main.hs  README.md
src/Data/LLVM/: BitCode.hs  CFG.hs  Internal.hs
src/Data/LLVM/BitCode/: Assert.hs  BitString.hs  Bitstream.hs  GetBits.hs  IR.hs  Match.hs  Parse.hs  Record.hs
src/Data/LLVM/BitCode/IR/: Attrs.hs  Blocks.hs  Constants.hs  Function.hs  Globals.hs  Metadata.hs  Module.hs  Types.hs  Values.hs
unit-test/: Main.hs
unit-test/Tests/: ExpressionInstances.hs  FuncDataInstances.hs  Instances.hs  Metadata.hs  PrimInstances.hs  StmtInstances.hs  TripleInstances.hs
