Name:                llvm-pretty-bc-parser
Version:             0.4.0.0
License:             BSD3
License-file:        LICENSE
Author:              Trevor Elliott <trevor@galois.com>
Maintainer:          Trevor Elliott
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.10
Synopsis:            LLVM bitcode parsing library
Tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.1

Description:
  A parser for the LLVM bitcode file format, yielding a Module from the
  llvm-pretty package.

Extra-source-files:  disasm-test/tests/*.ll

Flag fuzz
  Description:         Enable fuzzing harness
  Default:             False

Flag regressions
  Description:         Enable regression testing build
  Default:             False

Source-repository head
  type:                git
  location:            http://github.com/galoisinc/llvm-pretty-bc-parser

Library
  Hs-source-dirs:      src
  Exposed-modules:     Data.LLVM.CFG,
                       Data.LLVM.BitCode,
                       -- for testing:
                       Data.LLVM.Internal

  Default-language:    Haskell2010

  Other-modules:       Data.LLVM.BitCode.Assert,
                       Data.LLVM.BitCode.BitString,
                       Data.LLVM.BitCode.Bitstream,
                       Data.LLVM.BitCode.GetBits,
                       Data.LLVM.BitCode.IR,
                       Data.LLVM.BitCode.IR.Attrs
                       Data.LLVM.BitCode.IR.Blocks,
                       Data.LLVM.BitCode.IR.Constants,
                       Data.LLVM.BitCode.IR.Function,
                       Data.LLVM.BitCode.IR.Globals,
                       Data.LLVM.BitCode.IR.Metadata,
                       Data.LLVM.BitCode.IR.Module,
                       Data.LLVM.BitCode.IR.Types,
                       Data.LLVM.BitCode.IR.Values,
                       Data.LLVM.BitCode.Match,
                       Data.LLVM.BitCode.Parse,
                       Data.LLVM.BitCode.Record

  Ghc-options:         -Wall

  Build-depends:       array        >= 0.3,
                       base         >= 4 && < 5,
                       bytestring   >= 0.9.1,
                       cereal       >= 0.3.5.2,
                       containers   >= 0.4,
                       fgl          >= 5.5,
                       hashable,
                       llvm-pretty  >= 0.11 && < 0.12,
                       mtl          >= 2.2.2,
                       pretty       >= 1.0.1,
                       uniplate     >= 1.6,
                       utf8-string  >= 1.0

Executable llvm-disasm
  Main-is:             LLVMDis.hs
  Default-language:    Haskell2010
  Ghc-options:         -Wall
  Hs-source-dirs:      llvm-disasm
  Build-depends:       bytestring >= 0.9.1,
                       base       >= 4 && < 5,
                       pretty     >= 1.0.1,
                       containers >= 0.4,
                       array      >= 0.3,
                       monadLib   >= 3.7.2,
                       fgl        >= 5.5,
                       fgl-visualize >= 0.1,
                       cereal     >= 0.3.5.2,
                       llvm-pretty,
                       pretty-show>= 1.6,
                       llvm-pretty-bc-parser

test-suite unit-test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:       Tests.Instances,
                         Tests.Metadata
    hs-source-dirs:      unit-test
    default-language:    Haskell2010
    ghc-options:         -W -Wcompat
                         -Wunrecognised-warning-flags
                         -threaded
    -- other-extensions:    OverloadedStrings, ...
    build-depends: base -any,
                   containers >= 0.4,
                   HUnit -any,
                   QuickCheck -any,
                   generic-random -any,
                   tasty -any,
                   tasty-hunit -any,
                   tasty-quickcheck -any,
                   llvm-pretty -any,
                   llvm-pretty-bc-parser

Test-suite disasm-test
  type:                exitcode-stdio-1.0
  Main-is:             Main.hs
  Default-language:    Haskell2010
  hs-source-dirs:      disasm-test
  Ghc-options:         -Wall
  build-depends:       base >= 4 && < 5,
                       process,
                       directory,
                       bytestring,
                       filepath,
                       pretty-show>= 1.6,
                       syb        >= 0.7,
                       llvm-pretty,
                       llvm-pretty-bc-parser

Executable regression-test
  Main-is:             Main.hs
  Default-language:    Haskell2010
  hs-source-dirs:      regression-test
  Ghc-options:         -Wall
  build-depends:       base >= 4 && < 5,
                       directory,
                       filepath,
                       foldl,
                       text,
                       turtle,
                       llvm-pretty,
                       llvm-pretty-bc-parser
  if flag(regressions)
      Buildable:       True
  else
      Buildable:       False

Executable fuzz-llvm-disasm
  Main-is:             Main.hs
  Default-language:    Haskell2010
  hs-source-dirs:      fuzzing
  Ghc-options:         -Wall -threaded -O2
  build-depends:       base >= 4 && < 5,
                       process,
                       directory,
                       bytestring,
                       filepath,
                       temporary,
                       random,
                       containers,
                       xml,
                       time,
                       deepseq,
                       abstract-par,
                       monad-par,
                       transformers,
                       llvm-pretty,
                       llvm-pretty-bc-parser
  if flag(fuzz)
      Buildable:       True
  else
      Buildable:       False
